--- a/Partes/header.html
+++ b/Partes/header.html
@@ -32,9 +32,16 @@
           <a class="dropdown-item" href="../../../UNIDADES/UT2/Ejercicios 2/Pagina_Unidad 2.2.html">Ejercicios 2</a>
         </div>
       </div>
-      <li class="nav-item dropdown">
-        <a class="nav-link " href="#">Unidad 3</a>
-      </li>
+      <div class="dropdown">
+        <button class="btn btn-link nav-link dropdown-toggle" type="button" id="dropdownMenuButton1"
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Unidad 3
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="../../../UNIDADES/UT3/Ejercicios 1/Pagina_Unidad 3.1.html">Ejercicios 1</a>
+          <a class="dropdown-item" href="../../../UNIDADES/UT3/Ejercicios 2/Pagina_Unidad 3.2.html">Ejercicios 2</a>
+        </div>
+      </div>
     </ul>
  
   </div>
