--- a/UNIDADES/UT1/Pagina_Unidad 1.html
+++ b/UNIDADES/UT1/Pagina_Unidad 1.html
@@ -5,18 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Document</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="../../../CSS/estilos.css">
+  <link rel="stylesheet" href="/CSS/estilos.css">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="../../../Funciones/ver_code_UT1.js"></script>
+  <script src="/Funciones/ver_code_UT1.js"></script>
 </head>
 <body>
   <div id="header-container"></div>
   <script>
     // Cargar el encabezado usando JavaScript
     const headerContainer = document.getElementById("header-container");
-    const headerURL = "../../../Partes/header.html";
+    const headerURL = "/Partes/header.html";
     fetch(headerURL)
         .then(response => response.text())
         .then(data => {
@@ -33,7 +33,7 @@
               <pre>
               <p class="codigo p-3 mb-2" id="UT1_1" style="display: none"></p>
             </pre>
-            <a href="../../UNIDADES/UT1/mysecondpage-1.html" target="_blank" class="btn btn-primary float-right">Abrir ejercicio</a>
+            <a href="/UNIDADES/UT1/mysecondpage-1.html" target="_blank" class="btn btn-primary float-right">Abrir ejercicio</a>
             <button class="btn btn-primary float-right mr-4" onclick="ver_code('UT1_1', this)">Mostrar código</button>           
         </div>
     </section>
@@ -45,7 +45,7 @@
             <pre>
             <p class="codigo p-3 mb-2" id="UT1_2" style="display: none"></p>
           </pre>
-          <a href="../../UNIDADES/UT1/mysecondpage-1.html" target="_blank" class="btn btn-primary float-right">Abrir ejercicio</a>
+          <a href="/UNIDADES/UT1/mysecondpage-1.html" target="_blank" class="btn btn-primary float-right">Abrir ejercicio</a>
           <button class="btn btn-primary float-right mr-4" onclick="ver_code('UT1_2', this)">Mostrar código</button>           
       </div>
   </section>
@@ -57,7 +57,7 @@
           <pre>
           <p class="codigo p-3 mb-2" id="UT1_3" style="display: none"></p>
         </pre>
-        <a href="../../UNIDADES/UT1/mysecondpage-1.html" target="_blank" class="btn btn-primary float-right">Abrir ejercicio</a>
+        <a href="/UNIDADES/UT1/mysecondpage-1.html" target="_blank" class="btn btn-primary float-right">Abrir ejercicio</a>
         <button class="btn btn-primary float-right mr-4" onclick="ver_code('UT1_3', this)">Mostrar código</button>           
     </div>
 </section>
