--- a/UNIDADES/UT2/Ejercicios 1/Pagina_Unidad 2.1.html
+++ b/UNIDADES/UT2/Ejercicios 1/Pagina_Unidad 2.1.html
@@ -7,7 +7,7 @@
   <title>DEW</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="../../../CSS/estilos.css">
+  <link rel="stylesheet" href="/CSS/estilos.css">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
@@ -17,14 +17,14 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-  <script src="../../../Funciones/ver_code_UT2_1.js"></script>
+  <script src="/Funciones/ver_code_UT2_1.js"></script>
 </head>
 
 <div id="header-container"></div>
 <script>
   // Cargar el encabezado usando JavaScript
   const headerContainer = document.getElementById("header-container");
-  const headerURL = "../../../Partes/header.html";
+  const headerURL = "/Partes/header.html";
   fetch(headerURL)
     .then(response => response.text())
     .then(data => {
@@ -41,13 +41,13 @@
       <pre>
       <p class="codigo p-3 mb-4" id="UT2.1_1" style="display: none"></p>
       </pre>
-      <a href="../../../UNIDADES/UT2/Ejercicios 1/Ejercicio 1.html" target="_blank"
+      <a href="/UNIDADES/UT2/Ejercicios 1/Ejercicio 1.html" target="_blank"
         class="btn btn-primary float-right">Abrir ejercicio</a>
       <button class="btn btn-primary float-right mr-4" onclick="ver_code('UT2.1_1', this)">Mostrar código</button>
 
     </div>
   </section>
-  <section id="seccion1" class="card mb-4 tarjeta">
+  <section id="seccion2" class="card mb-4 tarjeta">
     <div class="card-body">
       <h2 class="card-title">Ejercicio 2</h2>
       <p class="card-text">La función typeof() devuelve el tipo de una variable. Hacer un
@@ -56,12 +56,12 @@
       <pre>
       <p class="codigo p-3 mb-4" id="UT2.1_2" style="display: none"></p>
     </pre>
-      <a href="../../../UNIDADES/UT2/Ejercicios 1/Ejercicio 2.html" target="_blank"
+      <a href="/UNIDADES/UT2/Ejercicios 1/Ejercicio 2.html" target="_blank"
         class="btn btn-primary float-right">Abrir ejercicio</a>
       <button class="btn btn-primary float-right mr-4" onclick="ver_code('UT2.1_2', this)">Mostrar código</button>
     </div>
   </section>
-  <section id="seccion1" class="card mb-4 tarjeta">
+  <section id="seccion3" class="card mb-4 tarjeta">
     <div class="card-body">
       <h2 class="card-title">Ejercicio 3</h2>
       <p class="card-text">Vamos a realizar una pequeña página que pida al usuario un
@@ -71,12 +71,12 @@
         <pre>
       <p class="codigo p-3 mb-4" id="UT2.1_3" style="display: none"></p>
     </pre>
-      <a href="../../../UNIDADES/UT2/Ejercicios 1/Ejercicio 3.html" target="_blank"
+      <a href="/UNIDADES/UT2/Ejercicios 1/Ejercicio 3.html" target="_blank"
         class="btn btn-primary float-right">Abrir ejercicio</a>
       <button class="btn btn-primary float-right mr-4" onclick="ver_code('UT2.1_3', this)">Mostrar código</button>
     </div>
   </section>
-  <section id="seccion1" class="card mb-4 tarjeta">
+  <section id="seccion4" class="card mb-4 tarjeta">
     <div class="card-body">
       <h2 class="card-title">Ejercicio 4</h2>
       <p class="card-text">Veamos otro ejemplo sencillo que nos ilustra sobre el manejo
@@ -85,12 +85,12 @@
         <pre>
           <p class="codigo p-3 mb-4" id="UT2.1_4" style="display: none"></p>
         </pre>
-      <a href="../../../UNIDADES/UT2/Ejercicios 1/Ejercicio 4.html" target="_blank"
+      <a href="/UNIDADES/UT2/Ejercicios 1/Ejercicio 4.html" target="_blank"
         class="btn btn-primary float-right">Abrir ejercicio</a>
         <button class="btn btn-primary float-right mr-4" onclick="ver_code('UT2.1_4', this)">Mostrar código</button>
     </div>
   </section>
-  <section id="seccion1" class="card mb-4 tarjeta">
+  <section id="seccion5" class="card mb-4 tarjeta">
     <div class="card-body">
       <h2 class="card-title">Ejercicio 5</h2>
       <p class="card-text">Hay un formato para el if que se utiliza mucho en
@@ -100,12 +100,12 @@
         <pre>
           <p class="codigo p-3 mb-4" id="UT2.1_5" style="display: none"></p>
         </pre>
-      <a href="../../../UNIDADES/UT2/Ejercicios 1/Ejercicio 5.html" target="_blank"
+      <a href="/UNIDADES/UT2/Ejercicios 1/Ejercicio 5.html" target="_blank"
         class="btn btn-primary float-right">Abrir ejercicio</a>
         <button class="btn btn-primary float-right mr-4" onclick="ver_code('UT2.1_5', this)">Mostrar código</button>
     </div>
   </section>
-  <section id="seccion1" class="card mb-4 tarjeta">
+  <section id="seccion6" class="card mb-4 tarjeta">
     <div class="card-body">
       <h2 class="card-title">Ejercicio 6</h2>
       <p class="card-text"> Vamos a hacer una pausa para asimilar el bucle for con un
@@ -125,12 +125,12 @@
         <pre>
           <p class="codigo p-3 mb-4" id="UT2.1_6" style="display: none"></p>
         </pre>
-      <a href="../../../UNIDADES/UT2/Ejercicios 1/Ejercicio 6.html" target="_blank"
+      <a href="/UNIDADES/UT2/Ejercicios 1/Ejercicio 6.html" target="_blank"
         class="btn btn-primary float-right">Abrir ejercicio</a>
         <button class="btn btn-primary float-right mr-4" onclick="ver_code('UT2.1_6', this)">Mostrar código</button>
     </div>
   </section>
-  <section id="seccion1" class="card mb-4 tarjeta">
+  <section id="seccion7" class="card mb-4 tarjeta">
     <div class="card-body">
       <h2 class="card-title">Ejercicio 7</h2>
       <p class="card-text">Veamos el mismo ejemplo anterior del bucle for, pero con un
@@ -138,12 +138,12 @@
         <pre>
           <p class="codigo p-3 mb-4" id="UT2.1_7" style="display: none"></p>
         </pre>
-      <a href="../../../UNIDADES/UT2/Ejercicios 1/Ejercicio 7.html" target="_blank"
+      <a href="/UNIDADES/UT2/Ejercicios 1/Ejercicio 7.html" target="_blank"
         class="btn btn-primary float-right">Abrir ejercicio</a>
         <button class="btn btn-primary float-right mr-4" onclick="ver_code('UT2.1_7', this)">Mostrar código</button>
     </div>
   </section>
-  <section id="seccion1" class="card mb-4 tarjeta">
+  <section id="seccion8" class="card mb-4 tarjeta">
     <div class="card-body">
       <h2 class="card-title">Ejercicio 8</h2>
       <p class="card-text">Realizar un programa que solicite al usuario un valor, y
@@ -152,12 +152,12 @@
         <pre>
           <p class="codigo p-3 mb-4" id="UT2.1_8" style="display: none"></p>
         </pre>
-      <a href="../../../UNIDADES/UT2/Ejercicios 1/Ejercicio 8.html" target="_blank"
+      <a href="/UNIDADES/UT2/Ejercicios 1/Ejercicio 8.html" target="_blank"
         class="btn btn-primary float-right">Abrir ejercicio</a>
         <button class="btn btn-primary float-right mr-4" onclick="ver_code('UT2.1_8', this)">Mostrar código</button>
     </div>
   </section>
-  <section id="seccion1" class="card mb-4 tarjeta">
+  <section id="seccion9" class="card mb-4 tarjeta">
     <div class="card-body">
       <h2 class="card-title">Ejercicio 9</h2>
       <p class="card-text">El mismo anterior pero con bucle while.
@@ -165,12 +165,12 @@
       <pre>
         <p class="codigo p-3 mb-4" id="UT2.1_9" style="display: none"></p>
       </pre>
-      <a href="../../../UNIDADES/UT2/Ejercicios 1/Ejercicio 9.html" target="_blank"
+      <a href="/UNIDADES/UT2/Ejercicios 1/Ejercicio 9.html" target="_blank"
         class="btn btn-primary float-right">Abrir ejercicio</a>
         <button class="btn btn-primary float-right mr-4" onclick="ver_code('UT2.1_9', this)">Mostrar código</button>
     </div>
   </section>
-  <section id="seccion1" class="card mb-4 tarjeta">
+  <section id="seccion10" class="card mb-4 tarjeta">
     <div class="card-body">
       <h2 class="card-title">Ejercicio 10</h2>
       <p class="card-text">Hacer una Página web que genere una pirámide de 1 a 50,
@@ -185,12 +185,12 @@
         <pre>
           <p class="codigo p-3 mb-4" id="UT2.1_10" style="display: none"></p>
         </pre>
-      <a href="../../../UNIDADES/UT2/Ejercicios 1/Ejercicio 10.html" target="_blank"
+      <a href="/UNIDADES/UT2/Ejercicios 1/Ejercicio 10.html" target="_blank"
         class="btn btn-primary float-right">Abrir ejercicio</a>
         <button class="btn btn-primary float-right mr-4" onclick="ver_code('UT2.1_10', this)">Mostrar código</button>
     </div>
   </section>
-  <section id="seccion1" class="card mb-4 tarjeta">
+  <section id="seccion11" class="card mb-4 tarjeta">
     <div class="card-body tarjeta">
       <h2 class="card-title">Ejercicio 11</h2>
       <p class="card-text">Hacer una Página web que genere una pirámide de 1 a 50,
@@ -209,7 +209,7 @@
         <pre>
           <p class="codigo p-3 mb-4" id="UT2.1_11" style="display: none"></p>
         </pre>
-      <a href="../../../UNIDADES/UT2/Ejercicios 1/Ejercicio 11.html" target="_blank"
+      <a href="/UNIDADES/UT2/Ejercicios 1/Ejercicio 11.html" target="_blank"
         class="btn btn-primary float-right">Abrir ejercicio</a>
         <button class="btn btn-primary float-right mr-4" onclick="ver_code('UT2.1_11', this)">Mostrar código</button>
     </div>
