--- a/Partes/header.html
+++ b/Partes/header.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
   integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<link rel="stylesheet" href="../../../CSS/estilos.css">
+<link rel="stylesheet" href="/CSS/estilos.css">
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
   integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
@@ -17,10 +17,10 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
-        <a class="nav-link" href="../../../Pagina_principal.html">Inicio</a>
+        <a class="nav-link" href="/Pagina_principal.html">Inicio</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link " href="../../../UNIDADES/UT1/Pagina_Unidad 1.html">Unidad 1</a>
+        <a class="nav-link " href="/UNIDADES/UT1/Pagina_Unidad 1.html">Unidad 1</a>
       </li>
       <div class="dropdown">
         <button class="btn btn-link nav-link dropdown-toggle" type="button" id="dropdownMenuButton1"
@@ -28,8 +28,8 @@
           Unidad 2
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="../../../UNIDADES/UT2/Ejercicios 1/Pagina_Unidad 2.1.html">Ejercicios 1</a>
-          <a class="dropdown-item" href="../../../UNIDADES/UT2/Ejercicios 2/Pagina_Unidad 2.2.html">Ejercicios 2</a>
+          <a class="dropdown-item" href="/UNIDADES/UT2/Ejercicios 1/Pagina_Unidad 2.1.html">Ejercicios 1</a>
+          <a class="dropdown-item" href="/UNIDADES/UT2/Ejercicios 2/Pagina_Unidad 2.2.html">Ejercicios 2</a>
         </div>
       </div>
       <div class="dropdown">
@@ -38,8 +38,8 @@
           Unidad 3
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <a class="dropdown-item" href="../../../UNIDADES/UT3/Ejercicios 1/Pagina_Unidad 3.1.html">Ejercicios 1</a>
-          <a class="dropdown-item" href="../../../UNIDADES/UT3/Ejercicios 2/Pagina_Unidad 3.2.html">Ejercicios 2</a>
+          <a class="dropdown-item" href="/UNIDADES/UT3/Ejercicios 1/Pagina_Unidad 3.1.html">Ejercicios 1</a>
+          <a class="dropdown-item" href="/UNIDADES/UT3/Ejercicios 2/Pagina_Unidad 3.2.html">Ejercicios 2</a>
         </div>
       </div>
     </ul>
