Funcionamiento juego RPS terminado

--- a/UNIDADES/UT3/Ejercicios 2/Pagina_Unidad 3.2.html
+++ b/UNIDADES/UT3/Ejercicios 2/Pagina_Unidad 3.2.html
@@ -24,7 +24,7 @@
 <script>
   // Cargar el encabezado usando JavaScript
   const headerContainer = document.getElementById("header-container");
-  const headerURL = "../../../Partes/header.html";
+  const headerURL = "/Partes/header.html";
   fetch(headerURL)
     .then(response => response.text())
     .then(data => {
@@ -37,9 +37,6 @@
       <h2 class="card-title">Ejercicio 1</h2>
       <p class="card-text"> Moneda
       </p>
-      <pre>
-      <p class="codigo p-3 mb-4" id="UT3.1_1" style="display: none"></p>
-      </pre>
       <a href="/UNIDADES/UT3/Ejercicios 2/coinflip/coin.html" target="_blank"
         class="btn btn-primary float-right">Abrir ejercicio</a>
 
@@ -49,13 +46,9 @@
   <section id="seccion1" class="card mb-4 tarjeta">
     <div class="card-body">
       <h2 class="card-title">Ejercicio 2</h2>
-      <p class="card-text">-</p>
-      <pre>
-      <p class="codigo p-3 mb-4" id="UT3.1_2" style="display: none"></p>
-    </pre>
-      <a href="../../../UNIDADES/UT2/Ejercicios 1/Ejercicio 2.html" target="_blank"
+      <p class="card-text">Piedra, papel o tijera</p>
+      <a href="/UNIDADES/UT3/Ejercicios 2/piedra_papel/piedra_papel.html" target="_blank"
         class="btn btn-primary float-right">Abrir ejercicio</a>
-      <button class="btn btn-primary float-right mr-4" onclick="ver_code('UT3.1_2', this)">Mostrar código</button>
     </div>
   </section>
   <section id="seccion1" class="card mb-4 tarjeta">
