--- a/UNIDADES/UT3/Ejercicios 2/coinflip/coin.html
+++ b/UNIDADES/UT3/Ejercicios 2/coinflip/coin.html
@@ -36,16 +36,16 @@
 </script>
 <main>
 
-    <div class="container mx-auto text-right border mt-5">
-        <div class="stats my-3">
+    <div class="container mx-auto text-right mt-5 tarjeta pt-1">
+        <div class="stats mt-3 mr-3 ">
             <p id="heads-count" class="mb-0 font-weight-bold">Cara: 0</p>
             <p id="tails-count" class="mb-0 font-weight-bold">Cruz: 0</p>
             <p id="user-score" class="mb-0 font-weight-bold">Victorias: 0</p>
         </div>
-        <div class="container border d-flex justify-content-center">
+        <div class="container d-flex justify-content-center">
             <h3>Elige tu moneda</h3>
         </div>
-        <div class="container border d-flex justify-content-center mt-4 mb-3">
+        <div class="container d-flex justify-content-center mt-4 mb-3">
             <div>
                 <button class="btn cara-btn"><img src="./media/cara_moneda.png" style="max-width: 100px;"></button>
                 <button class="btn cruz-btn"><img src="./media/cruz_moneda.png" style="max-width: 100px;"></button>
