--- a/UNIDADES/UT3/Ejercicios 2/coinflip/coin.html
+++ b/UNIDADES/UT3/Ejercicios 2/coinflip/coin.html
@@ -3,15 +3,13 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flip A Coin</title>
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet">
+    <title>Coinflip</title>
     <!-- Bootstrap CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="../../../../CSS/estilos.css">
+  <link rel="stylesheet" href="/CSS/estilos.css">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
@@ -38,9 +36,9 @@
 
     <div class="container mx-auto text-right mt-5 tarjeta pt-1">
         <div class="stats mt-3 mr-3 ">
-            <p id="heads-count" class="mb-0 font-weight-bold">Cara: 0</p>
-            <p id="tails-count" class="mb-0 font-weight-bold">Cruz: 0</p>
-            <p id="user-score" class="mb-0 font-weight-bold">Victorias: 0</p>
+            <p id="cara-count" class="mb-0 font-weight-bold">Cara: 0</p>
+            <p id="cruz-count" class="mb-0 font-weight-bold">Cruz: 0</p>
+            <p id="usuario-score" class="mb-0 font-weight-bold">Victorias: 0</p>
         </div>
         <div class="container d-flex justify-content-center">
             <h3>Elige tu moneda</h3>
