--- a/UNIDADES/UT3/Ejercicios 1/Pagina_Unidad 3.1.html
+++ b/UNIDADES/UT3/Ejercicios 1/Pagina_Unidad 3.1.html
@@ -56,8 +56,9 @@
   <section id="seccion2" class="card mb-4 tarjeta">
     <div class="card-body">
       <h2 class="card-title">Ejercicio 2</h2>
-      <p class="card-text">Define una funcion que acoja un argumento numérico, incremente ese argumento y 
-        que después lo devuelva al emisor de la llamada. Invoque esa función desde la sección &lt;body&gt; de una página y muestra el resultado en pantalla</p>
+      <p class="card-text">Define una funcion que acoja un argumento numérico, incremente ese argumento y
+        que después lo devuelva al emisor de la llamada. Invoque esa función desde la sección &lt;body&gt; de una página
+        y muestra el resultado en pantalla</p>
       <p id="resultado">0</p>
       <button onclick="incrementarNumero()">Incrementar</button>
       <pre>
@@ -69,13 +70,14 @@
   <section id="seccion3" class="card mb-4 tarjeta">
     <div class="card-body">
       <h2 class="card-title">Ejercicio 3</h2>
-      <p class="card-text">Define una funcion que acepte dos parámetros numéricos. Si el valor del primer parámetro es mayor que el segundo muestra al usuario una alerta. 
+      <p class="card-text">Define una funcion que acepte dos parámetros numéricos. Si el valor del primer parámetro es
+        mayor que el segundo muestra al usuario una alerta.
         Si el valor del primer parámetro es menor o igual que el segundo, devuelve la suma de ambos</p>
-    <input type="number" id="numero1" placeholder="Primer número">
-    <input type="number" id="numero2" placeholder="Segundo número">
-    <button onclick="procesarValores()">Comparar y sumar</button>
-    <p id="output2"></p>
-    <pre>
+      <input type="number" id="numero1" placeholder="Primer número">
+      <input type="number" id="numero2" placeholder="Segundo número">
+      <button onclick="procesarValores()">Comparar y sumar</button>
+      <p id="output2"></p>
+      <pre>
       <p class="codigo p-3 mb-4" id="UT3.1_3" style="display: none"></p>
     </pre>
       <button class="btn btn-primary float-right mr-4" onclick="ver_code('UT3.1_3', this)">Mostrar código</button>
@@ -84,8 +86,9 @@
   <section id="seccion4" class="card mb-4 tarjeta">
     <div class="card-body">
       <h2 class="card-title">Ejercicio 4</h2>
-      <p class="card-text">Añade las funciones alert() adecuadas al siguiente código, de manera que pueda ver el valor en la variable result, antes y después de la llamada a la función
-        <pre>
+      <p class="card-text">Añade las funciones alert() adecuadas al siguiente código, de manera que pueda ver el valor
+        en la variable result, antes y después de la llamada a la función
+      <pre>
 function addNumbers(){
   firstNum = 4;
   secondNum = 8;
@@ -95,9 +98,11 @@ function addNumbers(){
   result = 0;
   sum = addNumbers();</pre>
       </p>
-      <script>result=0</script>
-      <button onclick="alert('Valor de result antes de llamar a addNumbers: ' + result)">Antes de llamar a la función</button>
-      <button onclick="addNumbers(); alert('Valor de result después de llamar a addNumbers: ' + result)">Después de llamar a la función</button>
+      <script>result = 0</script>
+      <button onclick="alert('Valor de result antes de llamar a addNumbers: ' + result)">Antes de llamar a la
+        función</button>
+      <button onclick="addNumbers(); alert('Valor de result después de llamar a addNumbers: ' + result)">Después de
+        llamar a la función</button>
       <pre>
       <p class="codigo p-3 mb-4" id="UT3.1_4" style="display: none"></p>
     </pre>
@@ -107,14 +112,19 @@ function addNumbers(){
   <section id="seccion5" class="card mb-4 tarjeta">
     <div class="card-body">
       <h2 class="card-title">Ejercicio 5</h2>
-      <p class="card-text">-</p>
-      <pre>
-          <p class="codigo p-3 mb-4" id="UT3.1_5" style="display: none"></p>
-        </pre>
-      <button class="btn btn-primary float-right mr-4" onclick="ver_code('UT3.1_5', this)">Mostrar código</button>
+      <p class="card-text">Realizar un programa que contenga las diferencias entre los loops: for, forEach, for in y for of.
+       En el mismo código explicar las diferencias, pros y contras, de cada uno de ellos.</p>
+      <button onclick="verForLoop()">Bucle for</button>
+      <button onclick="verForEachLoop()">Bucle forEach</button>
+      <button onclick="verForInLoop()">Bucle for...in</button>
+      <button onclick="verForOfLoop()">Bucle for...of</button>
+      <div id="result-box">
+        <h5 class="mt-3">Resultado</h5>
+        <p id="result"></p>
+      </div>
     </div>
   </section>
-  
+
 </main>
 <button class="material-icons" id="btn-regresar-arriba">&#8593</button>
 <script>  const btnRegresarArriba = document.getElementById("btn-regresar-arriba");
