--- a/UNIDADES/UT4/Ahorcado/index.html
+++ b/UNIDADES/UT4/Ahorcado/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title>Piedra, papel y tijera</title>
+   <title>Ahorcado</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -31,11 +31,10 @@
     });
 </script>
   <body>
-    <!-- Modal HTML estructurado para tu juego de ahorcado -->
 <div id="modalPalabraSecreta" class="modal container">
   <div class="modal-content">
     <span class="close">&times;</span>
-    <p>Introduce la palabra secreta:</p>
+    <p>Introduce la palabra:</p>
     <input type="password" id="inputPalabraSecreta"><br>
     <button onclick="establecerPalabraSecreta()">Aceptar</button>
   </div>
@@ -43,17 +42,22 @@
 
     <section class="container mt-5 text-center">
 <h1>Juego del Ahorcado</h1>
+
+
+<div class="m-4" id="palabra"></div>
+<div class="" id="zona_juego">
+  <span class="m-1 pt-3 letra-incorrecta"><img src="" id="imagenAhorcado" style="max-width: 250px;"></span>
+  <div class="m-4" id="estadoJuego"></div>
+  <span class="m-5" id="letrasErroneas" style="display:none"></span>
+</div>
+
+
+<div class="m-4 " id="letras"></div>
 <div class="mt-5">
   <button class="btn btn-primary m-2" onclick="iniciarJuego('unJugador')">Un Jugador</button>
   <button class="btn btn-primary m-2" onclick="iniciarJuego('variosJugadores')">Varios Jugadores</button><br>
 </div>
-
-<div class="m-4" id="palabra"></div>
-<div class="m-4" id="letrasErroneas" class="letra-incorrecta"></div>
-
-<div class="m-4 " id="letras"></div>
-<div class="m-4" id="estadoJuego"></div>
-<button class="btn btn-primary m-2" onclick="reiniciarJuego()" id="btnReiniciar">Reiniciar Juego</button>
+<button class="btn btn-secondary m-2" onclick="reiniciarJuego()" id="btnReiniciar">Reiniciar Juego</button>
 
 
 </section>
