--- a/UNIDADES/UT4/Pagina_Unidad 4.html
+++ b/UNIDADES/UT4/Pagina_Unidad 4.html
@@ -36,7 +36,12 @@
   <section id="seccion1" class="card mb-4 tarjeta">
     <div class="card-body">
       <h2 class="card-title">Ejercicio 1</h2>
-      <p class="card-text">Ahorcado
+      <p class="card-text">Juego para realizar entre dos usuarios. El primer usuario escribirá la palabra a adivinar en un
+        control tipo password (input type="password").Si la letra se repite se presentará tantas veces como esté presente. El resto de las letras se marcará
+        con guiones bajos, por ejemplo _A_A__A, suponiendo que se haya escrito PALABRA y que haya salido
+        elegida la letra A. A continuación el otro usuario comenzará su elección en otro control de edición (input
+        type="text") que solo acepte una letra. 
+        
       </p>
       <a href="/UNIDADES/UT4/Ahorcado/index.html" target="_blank"
         class="btn btn-primary float-right">Abrir ejercicio</a>
@@ -47,8 +52,32 @@
   <section id="seccion2" class="card mb-4 tarjeta">
     <div class="card-body">
       <h2 class="card-title">Ejercicio 2</h2>
-      <p class="card-text">Parking</p>
-      <a href="/UNIDADES/UT3/Ejercicios 2/piedra_papel/piedra_papel.html" target="_blank"
+      <p class="card-text">El usuario introducirá la fecha y hora de entrada del vehículo al aparcamiento en el formato
+        solicitado. El programa comprobará que se trata de una fecha y hora correcta y anterior a la fecha y hora
+        del sistema.La primera hora o fracción se facturará a 1,2 € y las restantes horas o fracciones a razón de 1,5 €.
+        Se facturará como máximo 20 euros por cada día completo de estancia.</p>
+      <a href="/UNIDADES/UT4/Parking/index.html" target="_blank"
+        class="btn btn-primary float-right">Abrir ejercicio</a>
+    </div>
+  </section>
+  <section id="seccion3" class="card mb-4 tarjeta">
+    <div class="card-body">
+      <h2 class="card-title">Ejercicio 3</h2>
+      <p class="card-text">El usuario introducirá una serie de elementos. Debe ordenar un vector con
+        números y string en mayúsculas y minúsculas, el resultado será la
+        ordenación ignorando mayúsculas y minúsculas. 
+        Visualizar el vector desordenado en pantalla, luego ordenado y también con
+        sus elementos al revés.</p>
+      <a href="/UNIDADES/UT4/Vectores/index.html" target="_blank"
+        class="btn btn-primary float-right">Abrir ejercicio</a>
+    </div>
+  </section>
+  <section id="seccion4" class="card mb-4 tarjeta">
+    <div class="card-body">
+      <h2 class="card-title">Ejercicio 4</h2>
+      <p class="card-text">El usuario introducirá un correo electrónico, se validará usando expresiones regulares. Volver a solicitarlo
+        hasta que sea correcto.</p>
+      <a href="/UNIDADES/UT4/Correo/index.html" target="_blank"
         class="btn btn-primary float-right">Abrir ejercicio</a>
     </div>
   </section>
