--- a/UNIDADES/UT5/Form 1/index.html
+++ b/UNIDADES/UT5/Form 1/index.html
@@ -23,43 +23,70 @@
 </head>
 
 <body>
-    <form onsubmit="agregar(event); return false;">
-        <div class="container border d-flex" id="form-container">
-            <div class="container border form-section">
-                <h2>Datos personales</h2>
-                <label for="apellidos">Apellidos:</label><br>
-                <input type="text" id="apellidos" required><br>
+    <h1 class="container text-center mt-5">Formulario
+        <hr>
+    </h1>
 
-                <label for="nombre">Nombre:</label><br>
-                <input type="text" id="nombre" required><br>
-                <br>
-                <label for="sexo">Sexo:</label><br>
-                <label><input type="radio" name="sexo" value="hombre" required> Hombre</label><br>
-                <label><input type="radio" name="sexo" value="mujer"> Mujer</label><br>
+    <form id="formulario" onsubmit="agregar(event); return false;">
+        <div class="container seccion d-flex mt-3" id="form-container">
+            <div class="container form-section mt-4">
+                <h2 class="container d-flex justify-content-center">Datos personales</h2>
+                <div class="container mt-5 d-flex flex-column">
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" id="nombre" required><br>
 
-                <label for="email">Correo electrónico:</label><br>
-                <input type="email" id="email" required><br><br>
+                    <label for="apellidos">Apellidos:</label>
+                    <input type="text" id="apellidos" required><br>
+
+                    <label for="email">Correo electrónico:</label>
+                    <input type="email" id="email" required><br>
+
+                    <label for="sexo">Sexo:</label>
+                    <div class="">
+                        <input type="radio" name="sexo" value="Hombre" required> Hombre
+                        <div class="mujer">
+                            <input type="radio" name="sexo" value="Mujer"> Mujer
+                        </div>
+                        <br>
+                    </div>
+
+
+                </div>
             </div>
 
-            <div class="container border form-section">
-                <h2>Información</h2>
-                <label for="llegada">¿Cómo llegó hasta aquí?</label><br>
-                <select id="llegada" required>
-                    <option value="azar">Al azar</option>
-                    <option value="url">Le indicaron la URL de la página</option>
-                    <option value="buscador" selected>A través de un buscador</option>
-                    <option value="enlace">Mediante un enlace desde otra página</option>
-                </select><br>
+            <div class="container form-section mt-4">
+                <h2 class="container d-flex justify-content-center">Información</h2>
+                <div class="container mt-5 d-flex flex-column">
+                    <label for="llegada">¿Cómo llegó hasta aquí?</label>
+                    <select id="llegada" required>
+                        <option value="Al azar">Al azar</option>
+                        <option value="Le indicaron la URL de la página">Le indicaron la URL de la página</option>
+                        <option value="A través de un buscador" selected>A través de un buscador</option>
+                        <option value="Mediante un enlace desde otra página">Mediante un enlace desde otra página
+                        </option>
+                    </select>
 
-                <label for="interes">¿Desearía más información sobre?</label><br>
-                <label><input type="checkbox" id="audiovisual" value="Material audiovisual"> Material
-                    audiovisual</label><br>
-                <label><input type="checkbox" id="textos" value="Textos electrónicos"> Textos electrónicos</label><br>
-                <label><input type="checkbox" id="libros" value="Libros de texto"> Libros de texto</label><br>
+                    <br><label for="interes">¿Desearía más información sobre?</label>
+                    <div class="checkboxs">
+                        <div class="form-check d-flex justify-content-left">
+                            <input class="form-check-input" type="checkbox" id="audiovisual" value="Material audiovisual">
+                            <label class="form-check-label">Material audiovisual</label>
+                        </div>
+                        <div class="form-check d-flex justify-content-left">
+                            <input class="form-check-input" type="checkbox" id="textos" value="Textos electrónicos">
+                            <label class="form-check-label">Textos electrónicos</label>
+                        </div>
+                        <div class="form-check d-flex justify-content-left">
+                            <input class="form-check-input" type="checkbox" id="libros" value="Libros de texto">
+                            <label class="form-check-label">Libros de texto</label>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="container border form-section d-flex justify-content-center text-center align-content-center align-items-center flex-column">
+        <div
+            class="container seccion form-section d-flex justify-content-center text-center align-content-center align-items-center flex-column mt-4">
             <div>
                 <h2>Acciones</h2>
             </div>
@@ -68,12 +95,16 @@
                 <ul id="listaDatos"></ul>
             </div>
             <div>
-                <button type="submit">Añadir</button>
-                <button onclick="visualizarDatosSeleccionado()">Visualizar Datos</button>
-                <button onclick="eliminar()">Eliminar</button>
+                <button class="btn btn-primary" type="submit">Añadir</button>
             </div>
-        </div>
+
     </form>
+    <div
+        class="container form-section d-flex justify-content-center text-center align-content-center align-items-center flex-column">
+        <button class="btn btn-secondary" onclick="visualizarDatosSeleccionado()">Visualizar Datos</button>
+        <button class="btn btn-danger" onclick="eliminar()">Eliminar</button>
+    </div>
+    </div>
 </body>
 
 </html>
