--- a/UNIDADES/UT5/Form 1/index.html
+++ b/UNIDADES/UT5/Form 1/index.html
@@ -21,6 +21,17 @@
         crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
 </head>
+<div id="header-container"></div>
+<script>
+    // Cargar el encabezado usando JavaScript
+    const headerContainer = document.getElementById("header-container");
+    const headerURL = "/Partes/header.html";
+    fetch(headerURL)
+        .then(response => response.text())
+        .then(data => {
+            headerContainer.innerHTML = data;
+        });
+</script>
 
 <body>
     <h1 class="container text-center mt-5">Formulario
@@ -69,7 +80,8 @@
                     <br><label for="interes">¿Desearía más información sobre?</label>
                     <div class="checkboxs">
                         <div class="form-check d-flex justify-content-left">
-                            <input class="form-check-input" type="checkbox" id="audiovisual" value="Material audiovisual">
+                            <input class="form-check-input" type="checkbox" id="audiovisual"
+                                value="Material audiovisual">
                             <label class="form-check-label">Material audiovisual</label>
                         </div>
                         <div class="form-check d-flex justify-content-left">
@@ -86,24 +98,23 @@
         </div>
 
         <div
-            class="container seccion form-section d-flex justify-content-center text-center align-content-center align-items-center flex-column mt-4">
+            class="botones container seccion form-section d-flex justify-content-center text-center align-content-center align-items-center flex-column mt-4">
             <div>
                 <h2>Acciones</h2>
             </div>
-            <div>
-                <!-- Lista de datos -->
-                <ul id="listaDatos"></ul>
-            </div>
+
             <div>
                 <button class="btn btn-primary" type="submit">Añadir</button>
-            </div>
+                <button class="btn btn-secondary" onclick="visualizarDatosSeleccionado()">Visualizar Datos</button>
+                <button class="btn btn-danger" onclick="eliminar()">Eliminar</button>
+            </div><br>
 
     </form>
-    <div
-        class="container form-section d-flex justify-content-center text-center align-content-center align-items-center flex-column">
-        <button class="btn btn-secondary" onclick="visualizarDatosSeleccionado()">Visualizar Datos</button>
-        <button class="btn btn-danger" onclick="eliminar()">Eliminar</button>
+    <div>
+        <!-- Lista de datos -->
+        <ul id="listaDatos"></ul>
     </div>
+
     </div>
 </body>
 
