--- a/UNIDADES/UT5/Pagina_Unidad 5.html
+++ b/UNIDADES/UT5/Pagina_Unidad 5.html
@@ -35,7 +35,7 @@
   <section id="seccion1" class="card mb-4 tarjeta">
     <div class="card-body">
       <h2 class="card-title">Ejercicio 1</h2>
-      <p class="card-text">FORMULARIO 1
+      <p class="card-text">Prueba de un formulario
         
       </p>
       <a href="/UNIDADES/UT5/Form 1/index.html" target="_blank"
@@ -47,7 +47,7 @@
   <section id="seccion2" class="card mb-4 tarjeta">
     <div class="card-body">
       <h2 class="card-title">Ejercicio 2</h2>
-      <p class="card-text">FORMULARIO 2</p>
+      <p class="card-text">Validación de un formulario</p>
       <a href="/UNIDADES/UT5/Form 2/index.html" target="_blank"
         class="btn btn-primary float-right">Abrir ejercicio</a>
     </div>
