--- a/UNIDADES/UT5/Form 2/index.html
+++ b/UNIDADES/UT5/Form 2/index.html
@@ -36,7 +36,7 @@
         <hr>
     </h1>
     <div class="container mt-2">
-        <form id="myForm">
+        <form id="form">
             <div class="mb-3">
                 <label for="nombre" class="form-label">Nombre</label>
                 <input type="text" class="form-control" id="nombre" required>
