--- a/Partes/header.html
+++ b/Partes/header.html
@@ -87,6 +87,33 @@
           <a class="dropdown-item" href="/UNIDADES/UT8/Pagina_Unidad 8.html">Ejercicios 1</a>
         </div>
       </div>
+      <div class="dropdown">
+        <button class="btn btn-link nav-link dropdown-toggle" type="button" id="dropdownMenuButton1"
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Unidad 9
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="/UNIDADES/UT9/Pagina_Unidad 9.html">Ejercicios 1</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <button class="btn btn-link nav-link dropdown-toggle" type="button" id="dropdownMenuButton1"
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Unidad 10
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="/UNIDADES/UT10/Pagina_Unidad 10.html">Ejercicios 1</a>
+        </div>
+      </div>
+      <div class="dropdown">
+        <button class="btn btn-link nav-link dropdown-toggle" type="button" id="dropdownMenuButton1"
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Unidad 11
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <a class="dropdown-item" href="/UNIDADES/UT11/Pagina_Unidad 11.html">Ejercicios 1</a>
+        </div>
+      </div>
     </ul>
  
   </div>
